--- a/Movies/Movies.csproj
+++ b/Movies/Movies.csproj
@@ -19,6 +19,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
     </ItemGroup>
     
     <ItemGroup>
@@ -27,6 +28,7 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Data\Data.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
     <Target Name="Tailwind" BeforeTargets="Build">
