--- a/Movies/Movies.csproj
+++ b/Movies/Movies.csproj
@@ -24,11 +24,16 @@
     
     <ItemGroup>
       <Folder Include="Models\" />
+      <Folder Include="Pages\" />
     </ItemGroup>
     
     <ItemGroup>
       <ProjectReference Include="..\Data\Data.csproj" />
       <ProjectReference Include="..\Services\Services.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
     </ItemGroup>
 
     <Target Name="Tailwind" BeforeTargets="Build">
